package edu.fiuba.algo3.modelo.Carta;

import edu.fiuba.algo3.modelo.Seccion.Seccion;
import edu.fiuba.algo3.modelo.Tablero;

import java.util.List;

public interface Carta {

    void usar();

    void usar(Seccion seccion);

}
